feat: added jwt token and logic to hondle with for the app
